# pyption

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
pyption/: option.py
