[tool.poetry]
name = "pyption"
version = "0.1.0"
description = "type Option, Some contains some value and Nothing contains absolutely nothing."
authors = ["Georgy Kritov <howluwqz1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
